--- a/build.xml
+++ b/build.xml
@@ -1,23 +1,35 @@
 <project name="cdkfx2" basedir="." default="build" >
 <property name="host.installed"        value="${basedir}/host.installed" />
 <property name="sdcc.source.dir"       value="${basedir}/sdcc/sdcc" />
+<property name="sdcc.install.dir"      value="${host.installed}/sdcc" />
+<property name="firmware.source.dir"   value="${basedir}/firmware/OPT8241-FX2-reference-FW" />
+<property environment="env" />
 
 <target name="clean">
 <delete dir="${host.installed}" />
 </target>
 
-<target name="bootstrap">
-<exec failonerror="true" executable="./configure" dir="${sdcc.source.dir}" />
-   <arg value="--prefix=${host.installed}/sdcc" />
+<target name="sdcc">
+<delete dir="${sdcc.install.dir}" />
+<exec failonerror="true" executable="./configure" dir="${sdcc.source.dir}">
+   <arg value="--prefix=${sdcc.install.dir}" />
 </exec>
 
-<exec failonerror="true" executable="make" dir="${sdcc.source.dir}" />
-   <arg value="install" />
+<exec failonerror="true" executable="make" dir="${sdcc.source.dir}">
    <arg value="-j8" />
+</exec> 
+</target>
+
+<target name="firmware">
+<exec executable="make" dir="${firmware.source.dir}">
+  <env key="PATH"  value="${env.PATH}:${sdcc.install.dir}/bin" />
 </exec>
 </target>
 
-<target name="build">
+<target name="bootstrap" depends="sdcc">
+</target>
+
+<target name="build" depends="firmware">
 </target>
 
 </project>
