--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,6 @@
 <project name="cdkfx2" basedir="." default="build" >
 <property name="host.installed"        value="${basedir}/host.installed" />
+<property name="target.installed"      value="${basedir}/target.installed" />
 <property name="sdcc.source.dir"       value="${basedir}/sdcc/sdcc" />
 <property name="sdcc.install.dir"      value="${host.installed}/sdcc" />
 <property name="firmware.source.dir"   value="${basedir}/firmware/OPT8241-FX2-reference-FW/fw" />
@@ -10,6 +11,7 @@
 
 <target name="clean">
 <delete dir="${host.installed}" />
+<delete dir="${target.installed}" />
 </target>
 
 <target name="sdcc">
@@ -32,7 +34,8 @@
 
 <target name="firmware">
 <exec executable="make" dir="${firmware.source.dir}">
-  <env key="PATH"  value="${env.PATH}:${sdcc.install.dir}/bin" />
+  <env key="PATH"    value="${env.PATH}:${sdcc.install.dir}/bin" />
+  <env key="VERBOSE" value="1" />
 </exec>
 </target>
 
