--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,7 @@
 <property name="target.installed"      value="${basedir}/target.installed" />
 <property name="sdcc.source.dir"       value="${basedir}/sdcc" />
 <property name="sdcc.install.dir"      value="${host.installed}/sdcc" />
-<property name="firmware.source.dir"   value="${basedir}/firmware/OPT8241-FX2-reference-FW" />
+<property name="firmware.source.dir"   value="${basedir}/firmware/OPT8241-FX2-reference-FW/fw" />
 <property name="fx2lib.source.dir"     value="${basedir}/fx2lib" />
 <property name="libusb.source.dir"     value="${basedir}/libusb" />
 
@@ -28,6 +28,11 @@
 
 <target name="fx2lib">
 <exec executable="make" dir="${fx2lib.source.dir}">
+  <env key="PATH"  value="${env.PATH}:${sdcc.install.dir}/bin" />
+  <arg value="all" />
+</exec>
+
+<exec executable="make" dir="${fx2lib.source.dir}/fw">
   <env key="PATH"  value="${env.PATH}:${sdcc.install.dir}/bin" />
   <arg value="all" />
 </exec>
