--- a/build.xml
+++ b/build.xml
@@ -92,6 +92,8 @@
 
 
 <target name="firmware">
+  <delete dir="${target.installed}" />
+  <mkdir  dir="${target.installed}/bin" />
 <!--
 <exec executable="make" dir="${firmware.source.dir}">
   <env key="PATH"        value="${env.PATH}:${sdcc.install.dir}/bin" />
@@ -110,7 +112,18 @@
   <arg value="all" />
 </exec>
 
+<exec executable="python" dir="${target.installed}/bin">
+  <arg value="${fx2lib.source.dir}/utils/ihx2iic.py" />
+  <arg value="--vid=0451" />
+  <arg value="--pid=9105" />
+  <arg value="--configbyte=0" />
+  <arg value="${firmware.source.dir}/release/fx2_main.ihx" />
+  <arg value="${target.installed}/bin/fx2_main.iic" />
+</exec>
+
 </target>
+
+
 
 <!--
 <target name="firmware">
